src/test/deca/context/invalid/ContextAvecObjet/Cast/booleanCastString.deca
//Description
//  Cast d'un string en boolean
//
//Réponse
//  Erreur contextuelle ligne 9
//  un string ne peut pas être cast dans un boolean
{
    boolean x = (boolean)("true");
}